namespace Opcion1LosBorbotones.Presentation.Handlers;

public interface ISearchCriteriaRequester<I>
{
    public I RequestCriteria();
}